--- a/src/app/pages/customer-advanced-page/rebill-expanded-details/rebill-expanded-details.component.scss
+++ b/src/app/pages/customer-advanced-page/rebill-expanded-details/rebill-expanded-details.component.scss
@@ -70,6 +70,11 @@
 
 }
 
+.button-disabled {
+  background: rgba(0,0,0,0.06) !important;
+  color: rgba(0,0,0,0.24) !important;
+}
+
 .details-wrapper {
   display: flex;
   margin: 0 20px;
