--- a/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.scss
+++ b/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.scss
@@ -70,6 +70,11 @@
         margin-left: auto;
       }
     }
+
+    .button-disabled {
+      background: rgba(0,0,0,0.06) !important;
+      color: rgba(0,0,0,0.24) !important;
+    }
   }
 }
 
