Change part of path letters to caps on graph.

--- a/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.html
+++ b/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.html
@@ -1,5 +1,5 @@
 <graphql-header
-  [path]="['Api Documentation']">
+  [path]="['API Documentation']">
 </graphql-header>
 <div class="docs">
   <mat-spinner *ngIf="!loaded; else load"></mat-spinner>
