--- a/src/app/pages/features-page/features-index/features.component.scss
+++ b/src/app/pages/features-page/features-index/features.component.scss
@@ -1,9 +1,10 @@
 .features {
   background: #E5E5E5;
+  display: flex;
 
   .container {
     float: left;
-    padding: 20px;
+    padding: 30px;
     margin-left: 20px;
     margin-top: 20px;
     max-width: 600px;
@@ -12,16 +13,6 @@
     border: 2px solid rgba(0, 0, 0, 0.12);
     display: flex;
     flex-direction: column;
-
-    button {
-      text-transform: uppercase;
-      background: #1EBEA5;
-      color: #FFFFFF;
-      font-size: 14px;
-      line-height: 16px;
-      font-weight: 500;
-      height: 36px;
-    }
 
     .flags {
       margin-bottom: 25px;
@@ -59,10 +50,6 @@
       mat-slide-toggle {
         margin-top: 20px;
       }
-    }
-
-    .flag-outer {
-      margin-top: 30px;
     }
 
     .line {
