--- a/src/app/pages/components/blue-header/blue-header.component.scss
+++ b/src/app/pages/components/blue-header/blue-header.component.scss
@@ -19,8 +19,10 @@
       color: rgba(255, 255, 255, 0.5);
 
       .item {
+        line-height: 22px;
         font-size: 12px;
         font-weight: 500;
+        cursor: pointer;
       }
 
       .arrow {
