--- a/src/app/pages/credit-cards-page/credit-cards-index/credit-cards.component.html
+++ b/src/app/pages/credit-cards-page/credit-cards-index/credit-cards.component.html
@@ -1,7 +1,6 @@
 <div class="entity-index">
-  <div class="entity-index__title">
-    {{'CREDITCARD_INDEX_TITLE' | translate}}
-  </div>
+
+  <blue-header [items]="crumbItems" [titleValue]="'CREDITCARD_INDEX_TITLE'"></blue-header>
 
   <button mat-icon-button color="primary" *ngIf="hasWritePermission()" (click)="openAddMode()" class="entity-index__add"><mat-icon>add</mat-icon></button>
 
