--- a/src/app/shared/components/spe-loader-header/spe-loader-header.component.html
+++ b/src/app/shared/components/spe-loader-header/spe-loader-header.component.html
@@ -1,14 +1,16 @@
-<div class="entity-view__info">
-  <div class="entity-view__info__image">
-    <div class="dummy-image"></div>
-  </div>
-  <div class="entity-view__info__data">
-    <div class="entity-view__info__data__date">
-      <div class="dummy-date"></div>
+<div class="blue-header-container">
+  <div class="info-section">
+    <div class="crumbs">
+      <div class="item">{{title | translate}}</div>
+      <mat-icon class="arrow">keyboard_arrow_right</mat-icon>
+      <div class="item item--dummy"></div>
     </div>
 
-    <div class="entity-view__info__data__name">
-      <div class="dummy-name"></div>
+    <div class="details">
+      <mat-icon class="back">arrow_back</mat-icon>
+      <div class="title-placeholder"></div>
     </div>
   </div>
+
+  <div class="icon"></div>
 </div>
