--- a/src/app/pages/account-management-page/account-management-roles/account-management-role-view/account-management-role-view.component.html
+++ b/src/app/pages/account-management-page/account-management-roles/account-management-role-view/account-management-role-view.component.html
@@ -1,4 +1,4 @@
-<account-management-header [path]="path" [value]="value"></account-management-header>
+<blue-header [items]="breadcrumbs" [titleValue]="role ? role.name : null"></blue-header>
 
 <tab-header class="tab-header--account-management" [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
