--- a/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.html
+++ b/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.html
@@ -1,8 +1,4 @@
-<account-management-header
-  [path]="['API Keys']"
-  [account]="account">
-</account-management-header>
-
+<blue-header [items]="breadcrumbs" [titleValue]="account ? account.name : null"></blue-header>
 
 <div class="body">
   <div class="header">
