--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
@@ -1,7 +1,4 @@
-<account-management-header
-  [path]="['Billing']"
-  [account]="account">
-</account-management-header>
+<blue-header [items]="breadcrumbs" [titleValue]="account ? account.name : null"></blue-header>
 
 <div>
   <account-management-billing-transactions-chart [lastBill]="lastBill"></account-management-billing-transactions-chart>
