--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
@@ -123,3 +123,57 @@
   margin-top: auto;
   border: 1px solid rgba(0,0,0,0.12);
 }
+
+.app-id-container {
+  display: flex;
+
+  .button {
+    padding: 6px 8px;
+    color: rgba(255,255,255,0.7);
+    border-radius: 4px;
+    border: 2px solid rgba(255,255,255,0.4);
+    font-size: 10px;
+    font-weight: 500;
+    background: #3D6EB3;
+    cursor: pointer;
+    transition: all 250ms;
+
+    &--active {
+      background: #2C98F0;
+      border-color: #2C98F0;
+      border-radius: 4px 0 0 4px;
+      transition: all 250ms;
+    }
+  }
+
+  .content {
+    display: flex;
+    align-items: center;
+    color: #8ED8FD;
+    background: #294A78;
+    width: 0;
+    overflow: hidden;
+    transition: width 250ms;
+    font-size: 10px;
+    border-radius: 0 4px 4px 0;
+
+    div {
+      padding: 0 12px;
+      white-space: nowrap;
+    }
+
+    mat-icon {
+      margin-left: auto;
+      margin-right: 6px;
+      font-size: 18px;
+      height: 18px;
+      width: 18px;
+      cursor: pointer;
+    }
+
+    &--visible {
+      width: 235px;
+      transition: width 250ms;
+    }
+  }
+}
