--- a/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.html
+++ b/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.html
@@ -1,4 +1,4 @@
-<account-management-header [path]="['Roles']" [account]="account"></account-management-header>
+<blue-header [items]="breadcrumbs" [titleValue]="account ? account.name : null"></blue-header>
 
 <div class="body">
   <div class="header">
