--- a/src/app/pages/account-management-page/account-management-users/account-management-users.component.html
+++ b/src/app/pages/account-management-page/account-management-users/account-management-users.component.html
@@ -1,6 +1,4 @@
-<account-management-header [path]="['Users']"
-                           [account]="account">
-</account-management-header>
+<blue-header [items]="breadcrumbs" [titleValue]="account ? account.name : null"></blue-header>
 
 <div class="body">
   <div class="header">
