--- a/src/app/pages/rebills-page/rebills-index/rebills.component.html
+++ b/src/app/pages/rebills-page/rebills-index/rebills.component.html
@@ -1,7 +1,6 @@
 <div class="entity-index">
-  <div class="entity-index__title">
-    {{'REBILL_INDEX_TITLE' | translate}}
-  </div>
+
+  <blue-header [items]="crumbItems" [titleValue]="'REBILL_INDEX_TITLE'"></blue-header>
 
   <mat-card class="entity-index__card">
     <mat-card-content class="entity-index__card__content">
