--- a/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
@@ -1,7 +1,6 @@
 <div class="entity-index">
-  <div class="entity-index__title">
-    {{'EMAILTEMPLATE_INDEX_TITLE' | translate}}
-  </div>
+
+  <blue-header [items]="crumbItems" [titleValue]="'EMAILTEMPLATE_INDEX_TITLE'"></blue-header>
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
