--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -1,23 +1,12 @@
 <div class="entity-view__container">
   <div *ngIf="entity; else spinner" class="entity-view">
 
-    <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
-
-    <div (click)="navigation.back()" class="entity-view__change-mode"><mat-icon>reply</mat-icon></div>
-
-    <div class="entity-view__header">
-      <div class="entity-view__header__title">{{entity.name}}</div>
-      <div class="entity-view__header__details">
-        <div class="date">{{'SINGLEPAGE_CREATED' | translate}}: {{entity.createdAt | formatDateTime: 'M/DD/YY h:mm A'}}</div>
-        <div class="id">ID: {{entity.id}}</div>
-      </div>
-    </div>
+    <blue-header [items]="breadcrumbs" [titleValue]="'ID: ' + entity.id"></blue-header>
 
     <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
     <mat-tab-group [(selectedIndex)]="selectedIndex">
       <mat-tab>
-
         <product-schedule-add-new [entity]="entity"
                                   [mode]="viewMode ? modes.View : modes.Update"
                                   (save)="saveOrUpdate(entity)"
@@ -29,7 +18,7 @@
 
       <mat-tab>
         <schedules-detailed
-          [statusMessage]="updateError ? 'Error occured on save' : productScheduleWaitingForUpdate ? 'Saving...' : 'All changes saved'"
+          [statusMessage]="updateError ? 'Error occurred on save' : productScheduleWaitingForUpdate ? 'Saving...' : 'All changes saved'"
           [singleScheduleMode]="true"
           [productSchedules]="[entity]"
           [startDate]="startDate"
