--- a/src/app/pages/product-schedule-page/product-schedules-index/product-schedules.component.html
+++ b/src/app/pages/product-schedule-page/product-schedules-index/product-schedules.component.html
@@ -1,8 +1,6 @@
 <div class="entity-index">
 
-  <div class="entity-index__title">
-    {{'PRODUCTSCHEDULE_INDEX_TITLE' | translate}}
-  </div>
+  <blue-header [items]="crumbItems" [titleValue]="'PRODUCTSCHEDULE_INDEX_TITLE'"></blue-header>
 
   <button mat-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddMode()"><mat-icon>add</mat-icon></button>
 
