More reliably reset default flags.

--- a/src/app/pages/features-page/features-index/features.component.html
+++ b/src/app/pages/features-page/features-index/features.component.html
@@ -1,9 +1,9 @@
 <features-header
   [path]="['SIX Administration', 'Features']">
 </features-header>
-<div class="features">
+<div class="features" *ngIf="featureFlags">
   <div class="container">
-    <div class="flags" *ngIf="featureFlags">
+    <div class="flags">
       <div class="flag flag-outer" *ngFor="let flag of featureFlags.flags; let i = index">
         <div class="header">
           <div class="name">{{flag.name}}</div>
