--- a/src/app/pages/customer-advanced-page/rebill-expanded-details/rebill-expanded-details.component.html
+++ b/src/app/pages/customer-advanced-page/rebill-expanded-details/rebill-expanded-details.component.html
@@ -29,15 +29,15 @@
 
       <button style="margin-left: auto"
               mat-button
-              [class.button-disabled]="!canRefund()"
-              [disabled]="!canRefund()"
-              (click)="openRefundDialog()">
+              [class.button-disabled]="!rebill.canRefund()"
+              [disabled]="!rebill.canRefund()"
+              (click)="refund.emit(rebill)">
         Refund
       </button>
       <button mat-button
-              [class.button-disabled]="!canReturn()"
-              [disabled]="!canReturn()"
-              (click)="openReturnDialog()">
+              [class.button-disabled]="!rebill.canReturn()"
+              [disabled]="!rebill.canReturn()"
+              (click)="ret.emit(rebill)">
         Return
       </button>
     </div>
@@ -146,7 +146,7 @@
         <div class="value details-link" [routerLink]="['/campaigns', rebill.parentSession.campaign.id]">{{rebill.parentSession.campaign.name}}</div>
 
         <div class="key">Rebill No</div>
-        <div class="value">{{calculateCycle()}}</div>
+        <div class="value">{{rebill.calculateCycle()}}</div>
       </div>
     </div>
   </div>
