Add missing modals on new customer views

--- a/src/app/pages/customer-advanced-page/customer-advanced.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced.component.html
@@ -37,7 +37,7 @@
       <mat-icon class="info-icon" (click)="infoVisible = false">close</mat-icon>
     </tab-header>
 
-    <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedSecondaryIndex">
+    <mat-tab-group class="tab--no-header tab--full-height" [(selectedIndex)]="selectedSecondaryIndex">
 
       <mat-tab>
         <customer-info [customer]="entity"></customer-info>
