--- a/src/app/pages/customer-advanced-page/rebill-item-components/product-item/product-item.component.html
+++ b/src/app/pages/customer-advanced-page/rebill-item-components/product-item/product-item.component.html
@@ -1,5 +1,5 @@
 <div class="product" *ngIf="product">
-  <div class="name">{{product.product.name}}</div>
+  <div class="name">{{product.product.name}} <mat-icon (click)="showProductDetails()">help_outline</mat-icon></div>
   <div class="image-wrapper">
     <div class="returns-wrapper">
       <div class="return" *ngFor="let return of product.returns">
@@ -7,7 +7,7 @@
         <span>Returned ({{return.quantity}}) {{return.return.createdAt | formatDateTime: 'M/D/YY'}}</span>
       </div>
     </div>
-    <div class="image" [style.background-image]="'url(' + getProductImage(product.product) + ')'"></div>
+    <div class="image" [style.background-image]="'url(' + product.product.getDefaultImagePath() + ')'"></div>
   </div>
   <div class="info">
     <div>SKU {{product.product.sku}}</div>
