--- a/src/app/pages/customer-advanced-page/rebill-item-components/product-item/product-item.component.scss
+++ b/src/app/pages/customer-advanced-page/rebill-item-components/product-item/product-item.component.scss
@@ -6,8 +6,18 @@
   color: #202124;
 
   .name {
+    display: flex;
     padding: 24px;
     font-size: 16px;
+
+    mat-icon {
+      margin-left: auto;
+      font-size: 18px;
+      height: 18px;
+      width: 18px;
+      cursor: pointer;
+      color: #2C98F0;
+    }
   }
 
   .image-wrapper {
