Use new customer views on customer spe

--- a/src/app/pages/customer-advanced-page/customer-advanced-rebills/customer-advanced-rebills.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-rebills/customer-advanced-rebills.component.html
@@ -31,6 +31,10 @@
                 </rebill-item>
               </ng-container>
             </div>
+
+            <div *ngIf="loaded && (!rebills || rebills.length === 0)" class="no-data">
+              No Orders found.
+            </div>
           </div>
         </mat-tab>
 
