Side search does not reset position after item is selected, graphql docs refactored.

--- a/src/app/graph-qldocs-2/components/side-search/side-search.component.html
+++ b/src/app/graph-qldocs-2/components/side-search/side-search.component.html
@@ -4,7 +4,7 @@
       (focus)="focused = true"
       (blur)="focused = false"
       placeholder="Search" [(ngModel)]="filterString"
-      (input)="filterTypes.emit(filterString)">
+      (input)="addQueryParams($event)">
   </mat-form-field>
 
   <div class="line"></div>
