Fix SPE title names.

--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -1,7 +1,7 @@
 <div class="entity-view__container">
   <div *ngIf="entity; else spinner" class="entity-view">
 
-    <blue-header [items]="breadcrumbs" [titleValue]="'ID: ' + entity.id"></blue-header>
+    <blue-header [items]="breadcrumbs" [titleValue]="entity.name"></blue-header>
 
     <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
