--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="entity; else spinner" class="entity-view">
 
-    <blue-header [items]="breadcrumbs" [titleValue]="entityBackup.name + ' ID: ' + entity.id"></blue-header>
+    <blue-header [items]="breadcrumbs" [titleValue]="entityBackup.name"></blue-header>
 
     <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
