Search input style changed on graphql docs.

--- a/src/assets/scss/_graph-qldocs.scss
+++ b/src/assets/scss/_graph-qldocs.scss
@@ -15,6 +15,10 @@
     display: none;
   }
 
+  .mat-form-field-wrapper {
+    padding-bottom: 10px;
+  }
+
   span {
     color: rgba(0, 0, 0, 0.54);
     font-size: 15px;
