--- a/src/app/graph-qldocs-2/components/side-container/side-container.component.scss
+++ b/src/app/graph-qldocs-2/components/side-container/side-container.component.scss
@@ -11,12 +11,21 @@
     width: 50%;
     margin: 25px;
     overflow: auto;
+
+    @media only screen and (max-width: 1600px) {
+      width: 100%;
+    }
   }
 
   .line {
     height: auto;
     width: 1px;
     background: #000000;
+
+    @media only screen and (max-width: 1600px) {
+      width: 100%;
+      height: 1px;
+    }
   }
 
   .title {
@@ -39,6 +48,10 @@
       border: 1px rgba(0, 0, 0, 0.12);
       cursor: pointer;
     }
+  }
+
+  @media only screen and (max-width: 1600px) {
+    flex-wrap: wrap;
   }
 }
 
