[skip ci] Resize side search input and change font style.

--- a/src/app/graph-qldocs-2/components/side-search/side-search.component.scss
+++ b/src/app/graph-qldocs-2/components/side-search/side-search.component.scss
@@ -7,6 +7,9 @@
     width: 315px;
     background: rgba(0, 0, 0, 0.06);
     border-radius: 4px;
+    height: 36px;
+    font-size: 15px;
+    font-weight: 400;
 
     input {
       caret-color: #1EB1FC;
